--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "@strapi/plugin-cloud": "5.30.1",
     "@strapi/plugin-users-permissions": "5.30.1",
     "@strapi/strapi": "5.30.1",
+    "axios": "^1.13.2",
+    "cheerio": "^1.0.0-rc.12",
+    "groq-sdk": "^0.37.0",
     "pg": "8.8.0",
+    "puppeteer": "^24.31.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
-    "styled-components": "^6.0.0"
+    "styled-components": "^6.0.0",
+    "xml2js": "^0.6.2"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0 <=22.x.x",
     "npm": ">=6.0.0"
