--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "strapi build",
     "console": "strapi console",
     "deploy": "strapi deploy",
+    "predev": "powershell -ExecutionPolicy Bypass -File ./start-dev-db.ps1",
     "dev": "strapi develop",
     "develop": "strapi develop",
     "start": "strapi start",
@@ -16,10 +17,11 @@
   },
   "dependencies": {
     "@mui/x-data-grid": "^8.21.0",
-    "@strapi/plugin-cloud": "5.30.1",
-    "@strapi/plugin-users-permissions": "5.30.1",
-    "@strapi/strapi": "5.30.1",
+    "@strapi/plugin-cloud": "5.33.1",
+    "@strapi/plugin-users-permissions": "5.33.1",
+    "@strapi/strapi": "5.33.1",
     "axios": "^1.13.2",
+    "better-sqlite3": "^12.5.0",
     "cheerio": "^1.0.0-rc.12",
     "groq-sdk": "^0.37.0",
     "pg": "8.8.0",
@@ -27,6 +29,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "socket.io": "^4.8.3",
     "styled-components": "^6.0.0",
     "xml2js": "^0.6.2"
   },
